--- a/package.json
+++ b/package.json
@@ -17,5 +17,7 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.2"
+    "@vitejs/plugin-react": "^4.3.1",
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
